--- a/src/app/features/crm/components/region/region.component.html
+++ b/src/app/features/crm/components/region/region.component.html
@@ -119,7 +119,7 @@
                 >
                   <td class="body">{{ region.name }}</td>
                   <td class="body">{{ region.overrideCommissionEarned }}</td>
-                  <td class="body">{{ region.managerId }}</td>
+                  <td class="body">{{ region.manager }}</td>
                   <td class="body">{{ region.managerAllowed }}</td>
                   <td class="body">{{ region.dateFrom }}</td>
                   <td class="body">{{ region.dateTo }}</td>
