--- a/src/app/features/crm/components/division/division.component.html
+++ b/src/app/features/crm/components/division/division.component.html
@@ -250,9 +250,9 @@
                 <option value="">Select Status</option>
                 <option
                   *ngFor="let status of statusesData"
-                  [value]="status.name"
+                  [value]="status.value"
                 >
-                  {{ status.name }}
+                  {{ status.name | uppercase }}
                 </option>
               </select>
             </div>
@@ -264,7 +264,7 @@
                     class="form-check-input"
                     type="radio"
                     id="inlineRadio1"
-                    value="YES"
+                    value="Y"
                     formControlName="default"
                   />
                   <label class="form-check-label" for="inlineRadio1">Yes</label>
@@ -274,7 +274,7 @@
                     class="form-check-input"
                     type="radio"
                     id="inlineRadio2"
-                    value="NO"
+                    value="N"
                     formControlName="default"
                   />
                   <label class="form-check-label" for="inlineRadio2">No</label>
