--- a/src/app/features/administration/components/tickets/ticket-details/risk-details/risk-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/risk-details/risk-details.component.html
@@ -1,4 +1,4 @@
-<div class="title">
+<!--<div class="title">
   <div class="row">
     <div class="col-sm-6">
       <p>
@@ -13,28 +13,145 @@
       </p>
     </div>
   </div>
-</div>
+</div>-->
 
 <div class="risk-details my-2">
-  <table class="table table-borderless">
+  <!--<table class="table table-borderless">
     <thead>
     <tr>
+      <th>Risk ID</th>
       <th>Description</th>
-      <th>Limit Amount</th>
-      <th>Free Limit</th>
-      <th class="currency">Rate</th>
-      <th class="currency">Premium (KSH)</th>
+      <th>Cover period</th>
+      <th>Subclass</th>
+      <th>Cover type</th>
+      <th>Sum insured</th>
+      <th>Premium</th>
+      <th>Insured</th>
+      <th>Commission</th>
+
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let sectionDetail of risk?.sectionsDetails">
+      <td>{{ sectionDetail?.riskId}}</td>
       <td>{{ sectionDetail?.sectionDesc | titlecase }}</td>
-      <td  class="currency">{{ sectionDetail.limitAmount | number: '1.2-2'}}</td>
-      <td class="currency">{{ sectionDetail.freeLimit | number: '1.2-2' }}</td>
-      <td class="currency">{{ sectionDetail.pilPremRate | number: '1.2-2' }}</td>
-      <td class="currency"> {{ sectionDetail.premium | number: '1.2-2'}} </td>
+      <td>{{ sectionDetail?.coverPeriod }}</td>
+      <td>{{ sectionDetail?.subclass }}</td>
+      <td>{{ sectionDetail?.coverType }}</td>
+      <td  class="currency">{{ sectionDetail.sumInsured | number: '1.2-2'}}</td>
+      <td class="currency">{{ sectionDetail.premium | number: '1.2-2' }}</td>
+      <td class="currency">{{ sectionDetail.insured | titlecase}}</td>
+      <td class="currency"> {{ sectionDetail.commission | number: '1.2-2'}} </td>
     </tr>
     </tbody>
-  </table>
+  </table>-->
+
+  <p-table
+    [autoLayout]="true"
+    [paginator]="true"
+    [rowHover]="true"
+    [resizableColumns]="true"
+    [showCurrentPageReport]="true"
+    [rows]="pageSize || 5"
+    [totalRecords]="risk?.totalElements"
+    [value]="risk?.content"
+    [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+    responsiveLayout="stack"
+    [scrollable]="true"
+    scrollHeight="400px"
+    currentPageReportTemplate="{first} - {last} of {totalRecords}"
+  >
+
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Risk ID</th>
+        <th>Description</th>
+        <th>Cover period</th>
+        <th>Subclass</th>
+        <th>Cover type</th>
+        <th>Sum insured</th>
+        <th>Premium</th>
+        <th>Insured</th>
+        <th>Commission</th>
+        <th></th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-sectionDetail>
+      <tr>
+        <td>{{ sectionDetail?.riskId}}</td>
+        <td>{{ sectionDetail?.sectionDesc | titlecase }}</td>
+        <td>{{ sectionDetail?.coverPeriod }}</td>
+        <td>{{ sectionDetail?.subclass }}</td>
+        <td>{{ sectionDetail?.sumInsured | number: '1.2-2'}}</td>
+        <td>{{ sectionDetail?.premium | number: '1.2-2' }}</td>
+        <td>{{ sectionDetail?.insured | titlecase}}</td>
+        <td>{{ sectionDetail?.commission | number: '1.2-2'}}</td>
+        <td>
+          <div class="view-more">
+            <button class="btn btn-link fw-bold text-primary" (click)="showViewMoreDialog()">
+              <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>
+            </button>
+          </div>
+        </td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td colspan="9">No Risk Detail(s) Found.</td>
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
 
+<!--view more dialog-->
+<p-dialog header="" [(visible)]="shouldShowViewMoreDialog" [style]="{width: '50vw'}">
+
+  <p-table
+    [autoLayout]="true"
+    [paginator]="true"
+    [rowHover]="true"
+    [resizableColumns]="true"
+    [showCurrentPageReport]="true"
+    [rows]="pageSize || 5"
+    [totalRecords]="sectionDetails?.totalElements"
+    [value]="sectionDetails?.content"
+    [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+    responsiveLayout="stack"
+    [scrollable]="true"
+    scrollHeight="400px"
+    currentPageReportTemplate="{first} - {last} of {totalRecords}"
+  >
+
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Description</th>
+        <th>Name</th>
+        <th>Limit</th>
+        <th>Premium</th>
+        <th>Rate type</th>
+        <th>Section rate</th>
+        <th>Free limit</th>
+        <th>Rate Div Fac</th>
+        <th>Multip</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-sectionDetail>
+      <tr>
+        <td>Section SI</td>
+        <td>Sum insured</td>
+        <td>600,000</td>
+        <td>30,000.00</td>
+        <td>FXD</td>
+        <td>5</td>
+        <td></td>
+        <td>100</td>
+        <td></td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td colspan="9">No Section Detail(s) Found.</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</p-dialog>
