VQ-1302/Mobile view on reinsurance screens

--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -996,6 +996,7 @@
     </div>
 </div>
 </ng-container>
+</div>
 <div>
     <button
       type="button"
@@ -1020,3 +1021,4 @@
         bdColor="rgba(255, 255, 255, 0.9)"
       ></ngx-spinner>
   </div>
+</div>
