--- a/src/app/features/lms/grp/components/reinsurance/components/quota-share-summary/quota-share-summary.component.html
+++ b/src/app/features/lms/grp/components/reinsurance/components/quota-share-summary/quota-share-summary.component.html
@@ -100,7 +100,7 @@
 
         </div>
 
-        <div class="accordion col-12" id="accordionExample" style="padding-top: 63px; width: 952px;">
+        <div class="accordion col-12 accordion-style" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
