--- a/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.html
@@ -120,7 +120,7 @@
 
         </div>
 
-        <div class="accordion col-12" id="accordionExample" style="padding-top: 63px; width: 932px;">
+        <div class="accordion col-12 accordion-style" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
