--- a/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.html
+++ b/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.html
@@ -1012,7 +1012,7 @@
 
         <!-- modals -->
     </div>
-    <div>
+    <div class="col-12">
         <button type="button" class="btn btn-primary back-button" (click)="onBack()">Back
         </button>
         <div class="col-12 policy-button-container">
