--- a/src/app/features/lms/grp/components/underwriting/components/underwriting/underwriting.component.html
+++ b/src/app/features/lms/grp/components/underwriting/components/underwriting/underwriting.component.html
@@ -1,7 +1,7 @@
 <div class="main col-12">
     <div class="container col-12">
         <div style="text-align: center;"><span class="quote-text">Quotation Summary</span></div>
-        <div class="row col-12 mt-3" style="color: black; padding-left: 25px;">
+        <div class="row col-12 mt-3" style="color: black;">
             <div class="col-md-4 col-xs-12 col-sm-12">
                 <table style="width: 100%;">
                     <tr>
