--- a/src/app/features/lms/grp/components/reinsurance/components/reinsurance-selection/reinsurance-selection.component.css
+++ b/src/app/features/lms/grp/components/reinsurance/components/reinsurance-selection/reinsurance-selection.component.css
@@ -209,3 +209,22 @@ p-multiSelect {
     font-weight: 600;
     line-height: normal;
 }
+
+@media screen and (max-width: 800px) {
+    .container {
+      width: 100%;
+      height: auto;
+    }
+
+    .form-select {
+        width: 100%;
+    }
+
+    .form {
+        width: 100%;
+    }
+
+    .proceed-button {
+        padding: 12px 0;
+    }
+}
