--- a/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.css
+++ b/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.css
@@ -6,6 +6,7 @@
   flex-shrink: 0;
   border-radius: 5px;
   background: #FFF;
+  padding-left: 40px;
 }
 
 .policy-button {
@@ -226,8 +227,39 @@
   overflow: hidden;
 }
 
-/* @media screen and (max-width: 800px) {
-    
-} */
-
-
+@media screen and (max-width: 800px) {
+  .container {
+    width: 100%;
+    height: auto;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #FFF;
+  }
+  .policy-button {
+    display: inline-flex;
+    height: 40px;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #00529B;
+    float: right;
+  }
+  .policy-button-container {
+    padding-right: 0px;
+    padding-top: 8px;
+  }
+  .back-button {
+    display: inline-flex;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border: none;
+    background: transparent;
+    color: #00529B;
+    float: left;
+    margin-top: 10px;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
