VQ-739: Ability to Share Quote via Email

--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -185,7 +185,7 @@
                             <div class="row mt-4 mb-4">
                                 <div class="col-6"></div>
                                 <div class="col-6 d-flex justify-content-end">                                      
-                                    <button type="button" class="btn btn-primary" id="sendQoute" data-bs-dismiss="modal" >Send</button>
+                                    <button type="button" class="btn btn-primary" id="sendQoute" data-bs-dismiss="modal" (click)="emaildetails()" >Send</button>
                                 </div>
                             </div>
                           </div>
